--- a/counter/package.json
+++ b/counter/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/Jesseyx/my_redux_examples/issues"
   },
-  "homepage": "https://github.com/Jesseyx/my_redux_examples"
+  "homepage": "https://github.com/Jesseyx/my_redux_examples",
+  "devDependencies": {
+    "babel": "^5.8.35",
+    "babel-core": "^5.8.35",
+    "babel-loader": "^5.4.0",
+    "express": "^4.13.3",
+    "webpack": "^1.12.11",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
+  }
 }
