--- a/todo/package.json
+++ b/todo/package.json
@@ -2,9 +2,8 @@
   "name": "todo",
   "version": "1.0.0",
   "description": "todo demo",
-  "main": "index.js",
   "scripts": {
-    
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/Jesseyx/my_redux_examples/issues"
   },
-  "homepage": "https://github.com/Jesseyx/my_redux_examples"
+  "homepage": "https://github.com/Jesseyx/my_redux_examples",
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-redux": "^4.1.1",
+    "redux": "^3.1.2"
+  },
+  "devDependencies": {
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1"
+  }
 }
