--- a/todo/package.json
+++ b/todo/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Jesseyx/my_redux_examples",
   "dependencies": {
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-redux": "^4.1.1",
     "redux": "^3.1.2"
   },
@@ -28,6 +29,7 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "express": "^4.13.4",
     "webpack": "^1.12.12",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
