--- a/reddit_api/package.json
+++ b/reddit_api/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
     "redux": "^3.1.7",
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3"
