--- a/counter_server/package.json
+++ b/counter_server/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "counter_simple",
+  "name": "counter_server",
   "version": "1.0.0",
   "description": "react, redux",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,18 +19,18 @@
     "url": "https://github.com/Jesseyx/my_redux_examples/issues"
   },
   "dependencies": {
+    "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "redux": "^3.3.1"
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "express": "^4.13.4",
-    "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack": "^1.12.13"
   }
 }
