--- a/todo/package.json
+++ b/todo/package.json
@@ -22,7 +22,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.1.1",
-    "redux": "^3.1.2"
+    "redux": "^3.1.2",
+    "reselect": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
