--- a/real-world/package.json
+++ b/real-world/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "babel-polyfill": "^6.5.0",
     "lodash": "^4.5.1",
+    "normalizr": "^2.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
