--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -26,6 +26,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "webpack": "^1.12.14"
+    "express": "^4.13.4",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
