done frame of the todomvc

--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/Jesseyx/my_redux_examples",
   "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
     "redux": "^3.3.1"
   },
   "devDependencies": {
