--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -22,7 +22,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "todomvc-app-css": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
@@ -30,6 +31,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "express": "^4.13.4",
+    "raw-loader": "^0.5.1",
+    "redux-logger": "^2.6.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
