--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Jesseyx/my_redux_examples",
   "dependencies": {
+    "classnames": "^2.2.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
