--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Redux todo mvc example",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "cross-env": "^1.0.7",
+    "expect": "^1.15.2",
     "express": "^4.13.4",
+    "mocha": "^2.4.5",
     "raw-loader": "^0.5.1",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.0",
