--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -38,6 +38,7 @@
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^0.14.7",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
