--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -4,7 +4,7 @@
   "description": "Redux todo mvc example",
   "scripts": {
     "start": "node server.js",
-    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register"
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "cross-env": "^1.0.7",
     "expect": "^1.15.2",
     "express": "^4.13.4",
+    "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
