Done TodoItem.spec.js

--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -4,7 +4,8 @@
   "description": "Redux todo mvc example",
   "scripts": {
     "start": "node server.js",
-    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js"
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/Jesseyx/my_redux_examples",
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "classnames": "^2.2.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
